--- a/moreprog/YouTube Vanced/YouTube Vanced.html
+++ b/moreprog/YouTube Vanced/YouTube Vanced.html
@@ -83,7 +83,7 @@
             </div>
         </div>
     </div>
-    <a id="ifandonwlod" href="filesprog/vanced_manager_2.6.2_crimson.apk">Скачать сейчас!</a>
+    <a id="ifandonwlod" href="filesprog/vanced_manager_2.6.2.apk">Скачать сейчас!</a>
 </section>
 
 <footer class="footer-section">
