--- a/program.html
+++ b/program.html
@@ -52,7 +52,7 @@
             <img src="img/Без2.png" alt="">
         </div>
         <p id="text1">iFun Screen Recorder – программа для записи видео с экрана, позволяющая записывать видео с отдельных окон, полноэкранные видео или выбранные участки экрана.</p>
-        <a id="ifandonwlod" href="filesprog/ifun-screen-recorder.exe">Скачать сейчас!</a>
+        <a id="ifandonwlod" href="moreprog/iFun Screen Recorder/filesprog/ifun-screen-recorder.exe">Скачать сейчас!</a>
         <a id="more" href="moreprog/iFun Screen Recorder/iFun Screen Recorder.html" alt="" width='560px' height='300px' target="_blank">Подробнее</a>
     </div>
 </div>
