--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
             <div class="content_blor">
                 <div class="cont1">
                     <div class="fi-content text-white">
-                        <h5><a href="programs12/Driver/categories.html" target="_blank">iFun Screen Recorder</a></h5>
+                        <h5><a href="moreprog/iFun Screen Recorder/iFun Screen Recorder.html" target="_blank">iFun Screen Recorder</a></h5>
                         <p>iFun Screen Recorder позволяет записывать видео экрана, отдельных окон или выбранного участка экрана.</p>
-                        <div><a id="driverprog" href="programs12/Driver/categories.html" target="_blank">Подробнее</a></div>
+                        <div><a id="driverprog" href="moreprog/iFun Screen Recorder/iFun Screen Recorder.html" target="_blank">Подробнее</a></div>
                     </div>
                 </div>
             </div>
