--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="klondike_h2 wow animate__animated animate__zoomIn">
             <h2>Клондайк Программистов</h2>
             <p>Приветствую вас на этом сайте. Здесь присутствуют самые разные программы для программиста или просто пользователя компьютора.
-                <br>Присутствует класний софт и много чего еще...</p>
+                <br>Также присутствует класний софт и много чего еще...</p>
         </div>
     </div>
     <div class="latest-news-section">
