--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
             <div class="content_blor">
                 <div class="cont1">
                     <div class="fi-content text-white">
-                        <h5><a href="moreprog/iFun Screen Recorder/iFun Screen Recorder.html" target="_blank">iFun Screen Recorder</a></h5>
+                        <h5><a href="programs_windows/iFun Screen Recorder/iFun Screen Recorder.html" target="_blank">iFun Screen Recorder</a></h5>
                         <p>iFun Screen Recorder позволяет записывать видео экрана, отдельных окон или выбранного участка экрана.</p>
-                        <div><a id="driverprog" href="moreprog/iFun Screen Recorder/iFun Screen Recorder.html" target="_blank">Подробнее</a></div>
+                        <div><a id="driverprog" href="programs_windows/iFun Screen Recorder/iFun Screen Recorder.html" target="_blank">Подробнее</a></div>
                     </div>
                 </div>
             </div>
@@ -274,10 +274,10 @@
             <div class="block_flex">
                 <div class="col-lg-3 col-md-6 p-0">
                     <div class="fi-content text-white">
-                        <h5><a href="moreprog\YouTube Vanced\YouTube Vanced.html" target="_blank">Программа YouTube Vanced</a></h5>
+                        <h5><a href="programs_android\YouTube Vanced\YouTube Vanced.html" target="_blank">Программа YouTube Vanced</a></h5>
                         <p>YouTube Vanced – мод на стандартное приложение которое позволяет смотреть YouTube без рекламы.</p>
-                        <div><a id="DuckDuck" href="moreprog\YouTube Vanced\YouTube Vanced.html" target="_blank">Подробнее</a></div>
-                        <div><a id="DuckDuckdow" href="moreprog\YouTube Vanced\filesprog/vanced_manager_2.6.2.apk" target="_blank">Скачать сейчас!</a></div>
+                        <div><a id="DuckDuck" href="programs_android\YouTube Vanced\YouTube Vanced.html" target="_blank">Подробнее</a></div>
+                        <div><a id="DuckDuckdow" href="programs_android\YouTube Vanced\filesprog/vanced_manager_2.6.2.apk" target="_blank">Скачать сейчас!</a></div>
                     </div>
                 </div>
             </div>
