--- a/hints_it.html
+++ b/hints_it.html
@@ -40,20 +40,12 @@
 </div>
 <div class="content">
     <section class="section-program">
-        <img src="img/7.png" alt="">
+        <img src="img/5.png" alt="">
     </section>
 </div>
 <div class="containeb">
     <div class="fon11">
-        <p id="imgprog"><img src="img/programm/i.jpg" alt=""></p>
-        <h2>Бесплатная Программа Для Записи Экрана</h2>
-        <p id="dataprog">17.05.2022</p>
-        <div class="windows5">
-            <img src="img/Без2.png" alt="">
-        </div>
-        <p id="text1">iFun Screen Recorder – программа для записи видео с экрана, позволяющая записывать видео с отдельных окон, полноэкранные видео или выбранные участки экрана.</p>
-        <a id="ifandonwlod" href="programs_windows/iFun Screen Recorder/filesprog/ifun-screen-recorder.exe">Скачать сейчас!</a>
-        <a id="more" href="programs_windows/iFun Screen Recorder/iFun Screen Recorder.html" alt="" width='560px' height='300px' target="_blank">Подробнее</a>
+        <p id="text1">Сдесь скоро будуть статьи</p>
     </div>
 </div>
 <footer class="footer-section">
