--- a/index.html
+++ b/index.html
@@ -54,16 +54,33 @@
 
     <section class="recent-game-section spad1 set-bg">
         <div class="containers">
+            <div class="section-tit">
+                <h2>Программы под Windows</h2>
+            </div>
             <div class="content_blor">
                 <div class="cont1">
-                    <div class="fi-content text-white">
-                        <h5><a href="programs_windows/iFun Screen Recorder/iFun Screen Recorder.html" target="_blank">iFun Screen Recorder</a></h5>
-                        <p>iFun Screen Recorder позволяет записывать видео экрана, отдельных окон или выбранного участка экрана.</p>
-                        <div><a id="driverprog" href="programs_windows/iFun Screen Recorder/iFun Screen Recorder.html" target="_blank">Подробнее</a></div>
+                    <div class="">
+                        <div class="fi-content text-white">
+                            <h5>
+                                <a href="programs_windows/Tor Browser/Tor Browser.html" target="_blank"><br>Tor Browser</a>
+                            </h5>
+                            <p>Веб-браузер который полностью<br> скроет посещаемые вами страницы.<br><br><br></p>
+                            <div><a id="driverprog" href="programs_windows/Tor Browser/Tor Browser.html" target="_blank">Подробнее</a></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="cont2">
+                    <div class="">
+                        <div class="fi-content text-white">
+                            <h5>
+                                <a href="programs_windows/iFun Screen Recorder/iFun Screen Recorder.html" target="_blank"><br>iFun Screen Recorder</a>
+                            </h5>
+                            <p>Программа для записи видео с экрана, позволяющая записывать видео с отдельных окон, полноэкранные видео или выбранные участки экрана.</p>
+                            <div><a id="Malwarebytesprog" href="programs_windows/iFun Screen Recorder/iFun Screen Recorder.html" target="_blank">Подробнее</a></div>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
         </div>
         <div><a class="program animate__animated animate__fadeInDown" href="program.html" target="_blank">Еще программы</a></div>
     </section>
