--- a/program.html
+++ b/program.html
@@ -45,15 +45,28 @@
 </div>
 <div class="containeb">
     <div class="fon11">
-        <p id="imgprog"><img src="img/programm/i.jpg" alt=""></p>
-        <h2>Бесплатная Программа Для Записи Экрана</h2>
+        <p id="imgprog"><img src="programs_windows/Tor Browser/img/1y2ex6msn9us8ggww.jpg" alt=""></p>
+        <h2>Tor Browser</h2>
         <p id="dataprog">17.05.2022</p>
         <div class="windows5">
             <img src="img/Без2.png" alt="">
         </div>
+        <p id="text1">Tor Browser - Веб-браузер который полностью скроет посещаемые вами страницы.<br><br></p>
+        <a id="ifandonwlod" href="programs_windows/Tor Browser/filesprog/torbrowser-install-win64-11.0.11.exe">Скачать сейчас!</a>
+        <a id="more" href="programs_windows/Tor Browser/Tor Browser.html" alt="" width='560px' height='300px' target="_blank">Подробнее</a>
+    </div>
+</div>
+<div class="containeb">
+    <div class="fon22">
+        <p id="imgprog"><img src="img/programm/i.jpg" alt=""></p>
+        <h2>Бесплатная Программа Для Записи Экрана</h2>
+        <p id="dataprog">17.05.2022</p>
+        <div class="windows6">
+            <img src="img/Без2.png" alt="">
+        </div>
         <p id="text1">iFun Screen Recorder – программа для записи видео с экрана, позволяющая записывать видео с отдельных окон, полноэкранные видео или выбранные участки экрана.</p>
-        <a id="ifandonwlod" href="programs_windows/iFun Screen Recorder/filesprog/ifun-screen-recorder.exe">Скачать сейчас!</a>
-        <a id="more" href="programs_windows/iFun Screen Recorder/iFun Screen Recorder.html" alt="" width='560px' height='300px' target="_blank">Подробнее</a>
+        <a id="ifandonwlod" href="moreprog/iFun Screen Recorder/filesprog/ifun-screen-recorder.exe">Скачать сейчас!</a>
+        <a id="more" href="moreprog/iFun Screen Recorder/iFun Screen Recorder.html" alt="" width='560px' height='300px' target="_blank">Подробнее</a>
     </div>
 </div>
 <footer class="footer-section">
