--- a/programs_windows/iFun Screen Recorder/iFun Screen Recorder.html
+++ b/programs_windows/iFun Screen Recorder/iFun Screen Recorder.html
@@ -31,7 +31,7 @@
 <header class="header-section">
     <div class="container">
         <a class="site-logo wow animate__animated animate__fadeIn" href="/index.html">
-            <img src="/img/logo.png" alt="">
+            <img src="img/logo.png" alt="">
         </a>
         <nav class="main-menu wow animate__animated animate__fadeIn">
             <a href="/index.html">Домашняя страница</a>
