--- a/program_android.html
+++ b/program_android.html
@@ -42,6 +42,8 @@
         <a href="https://t.me/official_programmerchannel">Наш Telegram Канал</a>
     </ul>
 </div>
+<script type="text/javascript" src="orphus/orphus.js"></script>
+<a href="//orphus.ru" id="orphus" target="_blank"><img alt="Система Orphus" src="orphus/orphus.png" border="0" width="310" height="100" /></a>
 <div class="content">
     <section class="section-program_3">
         <img src="img/4.png" alt="">
@@ -55,8 +57,8 @@
         <img src="img/Без имени1.png" alt="">
     </div>
     <p id="text2">YouTube Vanced - функциональный мод на YouTube для Android.Это неофициальная и модифицированная версия YouTube,дополненная такими функциями,как блокировка рекламы и трансляция в фоне.Приложение имеет многоязычный интерфейс.</p>
-    <a id="ifandonwlod33" href="programs_android/YouTube Vanced/filesprog/">Скачать сейчас!</a>
-    <a id="more33" href="moreprog/YouTube Vanced/YouTube Vanced.html" alt="" width='560px' height='300px' target="_blank">Подробнее</a>
+    <a id="ifandonwlod33" href="https://apps-klondikeprogrammers.github.io/android_program/YouTube%20Vanced/vanced_manager_2.6.2.apk">Скачать сейчас!</a>
+    <a id="more33" href="programs_android/YouTube Vanced/YouTube Vanced.html" alt="" width='560px' height='300px' target="_blank">Подробнее</a>
 </div>
 </div>
 <footer class="footer-section">
