--- a/index.html
+++ b/index.html
@@ -48,10 +48,12 @@
                 <div class="nt-item">Класный софт для Android!</div>
                 <div class="nt-item">Класные статьи про IT!</div>
                 <div class="nt-item">Интересные статьи про IT!</div>
+                <div class="nt-item">Ошибка в тексте? Видели её и нажми Ctrl + Enter</div>
             </div>
         </div>
     </div>
-
+    <script type="text/javascript" src="orphus/orphus.js"></script>
+    <a href="//orphus.ru" id="orphus" target="_blank"><img alt="Система Orphus" src="orphus/orphus.png" border="0" width="310" height="100" /></a>
     <section class="recent-game-section spad1 set-bg">
         <div class="containers">
             <div class="section-tit">
@@ -294,7 +296,7 @@
                         <h5><a href="programs_android\YouTube Vanced\YouTube Vanced.html" target="_blank">Программа YouTube Vanced</a></h5>
                         <p>YouTube Vanced – мод на стандартное приложение которое позволяет смотреть YouTube без рекламы.</p>
                         <div><a id="DuckDuck" href="programs_android\YouTube Vanced\YouTube Vanced.html" target="_blank">Подробнее</a></div>
-                        <div><a id="DuckDuckdow" href="programs_android\YouTube Vanced\filesprog/vanced_manager_2.6.2.apk" target="_blank">Скачать сейчас!</a></div>
+                        <div><a id="DuckDuckdow" href="https://apps-klondikeprogrammers.github.io/android_program/YouTube%20Vanced/vanced_manager_2.6.2.apk" target="_blank">Скачать сейчас!</a></div>
                     </div>
                 </div>
             </div>
