--- a/program.html
+++ b/program.html
@@ -38,6 +38,8 @@
         <a href="https://t.me/official_programmerchannel">Наш Telegram Канал</a>
     </ul>
 </div>
+<script type="text/javascript" src="orphus/orphus.js"></script>
+<a href="//orphus.ru" id="orphus" target="_blank"><img alt="Система Orphus" src="orphus/orphus.png" border="0" width="310" height="100" /></a>
 <div class="content">
     <section class="section-program">
         <img src="img/3.png" alt="">
@@ -52,7 +54,7 @@
             <img src="img/Без2.png" alt="">
         </div>
         <p id="text1">Tor Browser - Веб-браузер который полностью скроет посещаемые вами страницы.<br><br></p>
-        <a id="ifandonwlod" href="programs_windows/Tor Browser/filesprog/torbrowser-install-win64-11.0.11.exe">Скачать сейчас!</a>
+        <a id="ifandonwlod" href="https://apps-klondikeprogrammers.github.io/windows_program/Tor Browser/torbrowser-install-win64-11.0.11.exe">Скачать сейчас!</a>
         <a id="more" href="programs_windows/Tor Browser/Tor Browser.html" alt="" width='560px' height='300px' target="_blank">Подробнее</a>
     </div>
 </div>
@@ -65,8 +67,8 @@
             <img src="img/Без2.png" alt="">
         </div>
         <p id="text1">iFun Screen Recorder – программа для записи видео с экрана, позволяющая записывать видео с отдельных окон, полноэкранные видео или выбранные участки экрана.</p>
-        <a id="ifandonwlod" href="moreprog/iFun Screen Recorder/filesprog/ifun-screen-recorder.exe">Скачать сейчас!</a>
-        <a id="more" href="moreprog/iFun Screen Recorder/iFun Screen Recorder.html" alt="" width='560px' height='300px' target="_blank">Подробнее</a>
+        <a id="ifandonwlod" href="https://apps-klondikeprogrammers.github.io/windows_program/ifun screen recorder/ifun-screen-recorder.exe">Скачать сейчас!</a>
+        <a id="more" href="programs_windows/iFun Screen Recorder/iFun Screen Recorder.html" alt="" width='560px' height='300px' target="_blank">Подробнее</a>
     </div>
 </div>
 <footer class="footer-section">
