--- a/programs_windows/iFun Screen Recorder/iFun Screen Recorder.html
+++ b/programs_windows/iFun Screen Recorder/iFun Screen Recorder.html
@@ -42,6 +42,8 @@
     </div>
 </header>
 
+<script type="text/javascript" src="orphus/orphus.js"></script>
+<a href="//orphus.ru" id="orphus" target="_blank"><img alt="Система Orphus" src="orphus/orphus.png" border="0" width="310" height="100" /></a>
 <section class="page-info-section set-bg" data-setbg="img/1.jpg">
     <div class="pi-content">
         <div class="DriverTest">
@@ -95,7 +97,7 @@
             </div>
         </div>
     </div>
-    <a id="ifandonwlod" href="filesprog/ifun-screen-recorder.exe">Скачать сейчас!</a>
+    <a id="ifandonwlod" href="https://apps-klondikeprogrammers.github.io/windows_program/ifun screen recorder/ifun-screen-recorder.exe">Скачать сейчас!</a>
 </section>
 
 <footer class="footer-section">
