--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
     </div>
     <script type="text/javascript" src="orphus/orphus.js"></script>
-<a href="//orphus.ru" id="orphus" target="_blank"><img alt="Система Orphus" src="orphus/orphus.gif" border="0" width="125" height="115" /></a>
+<a href="//orphus.ru" id="orphus" target="_blank"><img alt="Система Orphus" src="orphus/orphus.png" border="0" width="340" height="100" /></a>
     <section class="recent-game-section spad1 set-bg">
         <div class="containers">
             <div class="section-tit">
