--- a/programs_android/YouTube Vanced/YouTube Vanced.html
+++ b/programs_android/YouTube Vanced/YouTube Vanced.html
@@ -36,7 +36,7 @@
         </a>
         <nav class="main-menu wow animate__animated animate__fadeIn">
             <a href="/index.html">Домашняя страница</a>
-            <a href="/programandroid.html">Программы под Android</a>
+            <a href="/program/android.html">Программы под Android</a>
             <a href="/program.html">Программы</a>
             <a href="https://www.youtube.com/channel/UCxEaB_co5cRKh1Ft39FNdxg">Наш YouTube Канал</a>
         </nav>
