--- a/programs_android/YouTube Vanced/YouTube Vanced.html
+++ b/programs_android/YouTube Vanced/YouTube Vanced.html
@@ -86,7 +86,7 @@
             </div>
         </div>
     </div>
-    <a id="ifandonwlod" href="filesprog/vanced_manager_2.6.2.apk">Скачать сейчас!</a>
+    <a id="ifandonwlod" href="https://apps-klondikeprogrammers.github.io/android_program/YouTube Vanced/vanced_manager_2.6.2.apk">Скачать сейчас!</a>
 </section>
 
 <footer class="footer-section">
