--- a/index.html
+++ b/index.html
@@ -289,16 +289,30 @@
         <div class="content_block">
             <div class="section-tit">
                 <h2>Программы под Android</h2>
+                <br>
             </div>
-            <div class="block_flex">
-                <div class="col-lg-3 col-md-6 p-0">
-                    <div class="fi-content text-white">
-                        <h5><a href="programs_android\YouTube Vanced\YouTube Vanced.html" target="_blank">Программа YouTube Vanced</a></h5>
-                        <p>YouTube Vanced – мод на стандартное приложение которое позволяет смотреть YouTube без рекламы.</p>
-                        <div><a id="DuckDuck" href="programs_android\YouTube Vanced\YouTube Vanced.html" target="_blank">Подробнее</a></div>
-                        <div><a id="DuckDuckdow" href="https://apps-klondikeprogrammers.github.io/android_program/YouTube%20Vanced/vanced_manager_2.6.2.apk" target="_blank">Скачать сейчас!</a></div>
-                    </div>
-                </div>
+			<div class="block_flex">
+				<div class="col-lg-3 col-md-6 p-0">
+					<div class="set-bg">
+						<div class="fi-content text-white">
+							<h5><a href="programs12/DuckDuckGo/DuckDuckGo.html" target="_blank">Программа Malwarebytes for Android</a></h5>
+							<p>Самая популярная технология противодействия вирусам на<br> мобильных устройствах! Приложение может защитить ваш смартфон или планшет от всех видов<br> мобильных вредоносных приложений<br> и угроз конфиденциальности.</p>
+							<div><a id="DuckDuck" href="programs12/DuckDuckGo/DuckDuckGo.html" target="_blank">Подробнее</a></div>
+							<div><a id="DuckDuckdow" href="https://verstkag.github.io/filesprogandroid/com.duckduckgo.mobile.android_5.111.0_51110000.apk" target="_blank">Скачать сейчас!</a></div>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-6 p-0">
+					<div class="set-bg">
+						<div class="fi-content text-white">
+							<h5><a href="programs_android/YouTube%20Vanced/YouTube%20Vanced.html" target="_blank">Программа YouTube Vanced</a></h5>
+							<p>YouTube Vanced – мод на стандартное приложение которое позволяет смотреть YouTube без рекламы. Приложение может защитить ваш смартфон или планшет от всех видов мобильных вредоносных приложений и угроз конфиденциальности.</p>
+							<br>
+                            <div><a id="DuckDuck" href="programs_android\YouTube Vanced\YouTube Vanced.html" target="_blank">Подробнее</a></div>
+							<div><a id="DuckDuckdow" href="https://apps-klondikeprogrammers.github.io/android_program/YouTube%20Vanced/vanced_manager_2.6.2.apk" target="_blank">Скачать сейчас!</a></div>
+						</div>
+					</div>
+				</div>
             </div>
         </div>
         </div>
