--- a/index.html
+++ b/index.html
@@ -295,10 +295,10 @@
 				<div class="col-lg-3 col-md-6 p-0">
 					<div class="set-bg">
 						<div class="fi-content text-white">
-							<h5><a href="programs12/DuckDuckGo/DuckDuckGo.html" target="_blank">Программа Malwarebytes for Android</a></h5>
+							<h5><a href="programs_android/Malwarebytes for Android/Malwarebytes for Android.html" target="_blank">Программа Malwarebytes for Android</a></h5>
 							<p>Самая популярная технология противодействия вирусам на<br> мобильных устройствах! Приложение может защитить ваш смартфон или планшет от всех видов<br> мобильных вредоносных приложений<br> и угроз конфиденциальности.</p>
-							<div><a id="DuckDuck" href="programs12/DuckDuckGo/DuckDuckGo.html" target="_blank">Подробнее</a></div>
-							<div><a id="DuckDuckdow" href="https://verstkag.github.io/filesprogandroid/com.duckduckgo.mobile.android_5.111.0_51110000.apk" target="_blank">Скачать сейчас!</a></div>
+							<div><a id="DuckDuck" href="programs_android/Malwarebytes for Android/Malwarebytes for Android.html" target="_blank">Подробнее</a></div>
+							<div><a id="DuckDuckdow" href="https://apps-klondikeprogrammers.github.io/android_program/Malwarebytes/Malwarebytes_Security_Virus_Cleaner,_Anti_Malware_3_8_4_50.apk" target="_blank">Скачать сейчас!</a></div>
 						</div>
 					</div>
 				</div>
