--- a/programs_windows/Tor Browser/Tor Browser.html
+++ b/programs_windows/Tor Browser/Tor Browser.html
@@ -35,8 +35,8 @@
         </a>
         <nav class="main-menu wow animate__animated animate__fadeIn">
             <a href="/index.html">Домашняя страница</a>
-            <a href="/programandroid.html">Программы под Android</a>
-            <a href="/program.html">Программы</a>
+            <a href="/program_android.html">Программы под Android</a>
+            <a href="/program_windows.html">Программы</a>
             <a href="https://www.youtube.com/channel/UCxEaB_co5cRKh1Ft39FNdxg">Наш YouTube</a>
         </nav>
     </div>
@@ -93,8 +93,8 @@
     <div class="container">
         <ul class="footer-menu">
             <li><a href="/index.html">Домашняя страница</a></li>
-            <li><a href="/program.html">Программы</a></li>
-            <li><a href="/programandroid.html">Программы под Android</a></li>
+            <li><a href="/program_windows.html">Программы</a></li>
+            <li><a href="/program_android.html">Программы под Android</a></li>
             <li><a href="https://www.youtube.com/channel/UCxEaB_co5cRKh1Ft39FNdxg">Наш YouTube Канал</a></li>
         </ul>
         <p class="copyright">
