--- a/program_android.html
+++ b/program_android.html
@@ -37,7 +37,7 @@
     </a>
     <ul class="menu__box">
         <a href="index.html">Домашняя страница</a>
-        <a href="program.html">Программы</a>
+        <a href="program_windows.html">Программы</a>
         <a href="https://www.youtube.com/channel/UCxEaB_co5cRKh1Ft39FNdxg">Наш YouTube Канал</a>
         <a href="https://t.me/official_programmerchannel">Наш Telegram Канал</a>
     </ul>
@@ -78,7 +78,7 @@
             <li><a href="/index.html">Домашняя страница</a></li>
             <li><a href="https://www.youtube.com/channel/UCxEaB_co5cRKh1Ft39FNdxg">Наш YouTube Канал</a></li>
             <li><a href="https://t.me/official_programmerchannel">Наш Telegram Канал</a></li>
-            <li><a href="programandroid.html">Программы под Android</a></li>
+            <li><a href="program_android.html">Программы под Android</a></li>
         </ul>
 
         <p class="copyright">
