--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <img src="img/logo.png" alt="">
             </a>
             <ul class="menu__box">
-                <a href="program.html">Программы</a>
+                <a href="program_windows.html">Программы</a>
                 <a href="program_android.html">Программы под Android</a>
                 <a href="https://www.youtube.com/channel/UCxEaB_co5cRKh1Ft39FNdxg">Наш YouTube Канал</a>
                 <a href="https://t.me/official_programmerchannel">Наш Telegram Канал</a>
