--- a/404.html
+++ b/404.html
@@ -1,8 +1,18 @@
-<html>
-    <head>
-        <title>404 Page not found</title>
-    </head>
-    <body>
-        404 Error Page not found
-    </body>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+	<meta charset="UTF-8">
+	<title>Error 404</title>
+	<link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+
+	<a href="index.html" class="return">Вернуться на главную страницу</a>	
+	<div class="numberError">
+		<h1 class="error" data-text="404">404</h1>
+	</div>
+	<h2 class="notFound">Страница не найдена</h2>
+    <br>
+    <h2 class="help">Ви наверно неправельно написали в адресной строке силку на страницу сайта</h2>
+</body>
 </html>
