--- a/404.html
+++ b/404.html
@@ -13,6 +13,6 @@
 	</div>
 	<h2 class="notFound">Страница не найдена</h2>
     <br>
-    <h2 class="help">Ви наверно неправельно написали в адресной строке силку на страницу сайта</h2>
+    <h2 class="help" align="center">Ви наверно неправельно написали в адресной строке силку на страницу сайта</h2>
 </body>
 </html>
