--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Error 404</title>
     <link href="img/favicon1.ico" rel="shortcut icon" />
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
 
