--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Error 404</title>
-    <link href="img/favicon1.ico" rel="shortcut icon" />
+    <link href="/img/favicon1.ico" rel="shortcut icon" />
 	<link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
