--- a/programs_windows/iFun Screen Recorder/iFun Screen Recorder.html
+++ b/programs_windows/iFun Screen Recorder/iFun Screen Recorder.html
@@ -42,8 +42,8 @@
     </div>
 </header>
 
-<script type="text/javascript" src="orphus/orphus.js"></script>
-<a href="//orphus.ru" id="orphus" target="_blank"><img alt="Система Orphus" src="orphus/orphus.png" border="0" width="340" height="100" /></a>
+<script type="text/javascript" src="/orphus/orphus.js"></script>
+<a href="//orphus.ru" id="orphus" target="_blank"><img alt="Система Orphus" src="/orphus/orphus.png" border="0" width="340" height="100" /></a>
 <section class="page-info-section set-bg" data-setbg="img/1.jpg">
     <div class="pi-content">
         <div class="DriverTest">
