--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <a href="program_windows.html">Программы</a>
                 <a href="program_android.html">Программы под Android</a>
                 <a href="https://www.youtube.com/channel/UCxEaB_co5cRKh1Ft39FNdxg">Наш YouTube Канал</a>
-                <a href="https://t.me/official_programmerchannel">Наш Telegram Канал</a>
+                <a href="https://t.me/klondikeprogrammers">Наш Telegram Канал</a>
             </ul>
         </div>
         <div class="backgroud_img">
