--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
     </div>
     <script type="text/javascript" src="orphus/orphus.js"></script>
 <a href="//orphus.ru" id="orphus" target="_blank"><img alt="Система Orphus" src="orphus/orphus.png" border="0" width="340" height="100" /></a>
+	<h1>Етот сайт перенесен на другой хостинг.<br>На етом сайте больше не будет обновленний и нового<br>Силка на новой сайт https://klondike-programmers.000webhostapp.com</h1>
     <section class="recent-game-section spad1 set-bg">
         <div class="containers">
             <div class="section-tit">
