--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-	<a href="index.html" class="return">Вернуться на главную страницу</a>	
+	<a href="https://klondike-programmers.ga" class="return">Вернуться на главную страницу</a>	
 	<div class="numberError">
 		<h1 class="error" data-text="404">404</h1>
 	</div>
